.charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-app-ingress
spec:
  rules:
  - host: democluster.simpleblocks.net
    http:
      paths:
      - path: /simple-app
        backend:
          serviceName: simple-app 
          servicePort: 80
